# BlendedPiecewiseMoebiusMaps

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  setup.sh
src/: BPM.cpp  BPM.h  BPMShader.cpp  BPMShader.h  CMakeLists.txt  Mobius.cpp  Mobius.h  main.cpp  utils.cpp  utils.h  utils.ipp
src/tests/: CMakeLists.txt  MatrixTests.h  MeshTests.h  test.cpp  test_utils.h
